# hos-padel

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml
.github/: CODEOWNERS
.github/workflows/: deploy.yaml
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/src/hos_padel/: __init__.py  main.py
backend/src/hos_padel/api/: dependencies.py
backend/src/hos_padel/api/routes/: __init__.py  availability.py  courts.py
backend/src/hos_padel/core/: config.py  constants.py
backend/src/hos_padel/models/: __init__.py  availability.py  booking.py  court.py
backend/src/hos_padel/scraper/: __init__.py  bookings.py  client.py  courts.py  timeframe.py
backend/src/hos_padel/services/: availability.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: availability.ts
frontend/src/components/Calendar/: DayColumn.tsx  DayView.tsx  SlotPopover.tsx  TimeAxis.tsx  TimeSlot.tsx  WeekView.tsx
frontend/src/hooks/: useAvailability.ts
frontend/src/types/: api.ts
frontend/src/utils/: dates.ts
infrastructure/: package-lock.json
infrastructure/lib/: ci-iam-stack.ts  config.ts  github-deploy-stack.ts  infrastructure-stack.ts
infrastructure/lib/constructs/: backend-service.ts  fargate-service.ts  frontend-bucket.ts
legacy/: all_bookings.py  all_bookings_fast.py  booking_request.py  court_request.py  court_schedule_dashboard.py  process_bookings.py  timeframe_request.py
(+3 files in other folders)
