[project]
name = "hos-padel-api"
version = "0.1.0"
description = "HOS Padel API - FastAPI backend for House of Sport padel court availability"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "aiohttp>=3.11.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hos_padel"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
